@@ -31,10 +31,10 @@ __version__ = "$Revision$"
 import numpy as np
 
 def print_ndarr(nda, name='', first=0, last=5) :
-    if nda is None : print '%s\n%s: %s' % (80*'_', name, nda)
+    if nda is None : print '%s: %s' % (name, nda)
     elif isinstance(nda, tuple) : print_ndarr(np.array(nda), 'ndarray from tuple: %s' % name)
     elif isinstance(nda, list)  : print_ndarr(np.array(nda), 'ndarray from list: %s' % name)
     elif not isinstance(nda, np.ndarray) :
-                     print '%s\n%s: %s' % (80*'_', name, type(nda))
-    else           : print '%s\n%s:  shape:%s  size:%d  dtype:%s %s...' % \
-         (80*'_', name, str(nda.shape), nda.size, nda.dtype, nda.flatten()[first:last])
+                     print '%s: %s' % (name, type(nda))
+    else           : print '%s:  shape:%s  size:%d  dtype:%s %s...' % \
+         (name, str(nda.shape), nda.size, nda.dtype, nda.flatten()[first:last])
